<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/preview_foto"
        android:scaleType="fitCenter"/>

    <TextView
        android:id="@+id/metadataTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/volverButton"
            android:layout_width="0dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textColor="@color/black"
            android:backgroundTint="@color/green"
            android:text="@string/volver" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:layout_weight="0.6"

            android:text="@string/borrar_imagen" />
    </LinearLayout>

</LinearLayout>